# f1-race-predictor

./: .gitignore  20260607_monaco_grand_prix.html  LICENSE  MODEL_CARD.md  README.md  generate_sample.py  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  update-prediction.yml  weekly-retrain.yml
data/processed/: f1_features.csv  f1_historical.csv
fastf1_cache/: fastf1_http_cache.sqlite
model/: model_metadata.json  optuna_best_params.json  prediction_history.json  validation_history.json
predictions/: 20260524_canadian_grand_prix.html
src/: __init__.py  circuit_metadata.py  config.py  eda.py  extract_data.py  feature_engineering.py  next_race.py  predict.py  train_model.py  visualizer.py
tests/: conftest.py  test_circuit_metadata.py  test_feature_engineering.py  test_integration.py  test_predict.py
