[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-race-predictor"
version = "1.0.0"
description = "ML pipeline that predicts F1 top-5 finishers using XGBoost + Hungarian assignment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["formula1", "f1", "machine-learning", "xgboost", "sports-analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastf1>=3.3.0",
    "xgboost>=2.0.0",
    "optuna>=3.4.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "shap>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-requests",
]

[project.scripts]
f1-predict = "src.predict:main"
f1-next-race = "src.next_race:main"

[project.urls]
Homepage = "https://github.com/Matenco/f1-race-predictor"
Repository = "https://github.com/Matenco/f1-race-predictor"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Linting and formatting ---
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in default args (common in our config)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]  # module-level imports after sys.path tweaks

# --- Type checking ---
[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true   # FastF1, plotly etc. don't ship strict stubs
strict_optional = false

# --- Testing ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
